# QT-automatic-operation

./: .gitignore  CMakeLists.txt  README.txt  auto_test.js  auto_test.sh  dbus_register.cpp  dbus_register.h  hooks.cpp  hooks.h  main.cpp  objecthelper.cpp  objecthelper.h  objectlistmanager.cpp  objectlistmanager.h  objectpath.cpp  objectpath.h  objectpathresolver.cpp  objectpathresolver.h  operationmanager.h  probe.cpp  probe.h  probecreator.cpp  probecreator.h  probeguard.h  scopeguard.h  signalspycallbackset.h  sigspy.cpp  sigspy.h  sop.cpp  sop.h  steprecord.h  uiacontroller.cpp  uiacontroller.h  util.h
QSingleInstance/: qsingleinstance.cpp  qsingleinstance.h
bak/: main.cpp
daemon/: client_d.h  daemon_process.cpp  daemon_process.h  main.cpp
daemon/gui/: mainwindow.h
gdbinjector/: gdb_injector.h
js/: javascript.qrc  testapi.js  testbase.js  testcase.js  tester.js
js/bak/: auto_test.js  index.html  test.js
js/javascript/: testapi.js  testbase.js  testcase.js
local_socket/: local_client.cpp  local_client.h  local_server.cpp  local_server.h  message.h
run/: cmd.gdb  res.json  runserver.sh
scriptengine/: js_cpp_interface.cpp  js_cpp_interface.h  scriptengine.cpp  scriptengine.h
test/: 30条.xls  auto_click.js  auto_click.sh  auto_test.sh  confirm.js  run.sh  test-cli  test.sh  用法.txt
test/test_case/: auto_click.js  auto_click.sh  create_account.js  launcher.js  nohup.out  test.sh
util/: dvtablehook.cpp  dvtablehook.h
websocket/: client_manager.h  echoclient.cpp  echoclient.h  echoserver.cpp  echoserver.h  proto.h
